@@ -1,5 +1,6 @@
 Changes for 1.4.5:
 
+ - [ZBX-206] fixed case sensitive hosts sorting (Artem)
  - [ZBX-313] fixed problem with sqlite3 sepamhore (Sasha)
  - [ZBX-292] fixed negative values in availability report issue (Artem)
  - [ZBX-182] fixed processing of icmpping if dns name cannot be resolved (Sasha)
